@@ -16,6 +16,10 @@ Enhancements::
 * add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
 * add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)
 
+Bug Fixes::
+
+* fix position of background color on caption with outside margin (#2271)
+
 == 2.1.4 (2022-06-26) - @mojavelinux
 
 Improvements::
